# intelmq-mailgen

./: .gitignore  COPYING  Makefile  NEWS.md  README.md  README.rst  config-example.json  example-template-dronereport.txt  example-template-sslfreak.txt  example-template.txt  intelmq-mailgen  intelmq-mailgen.conf.example  intelmqcli  intelmqcli.conf.example  setup.cfg  setup.py
debian/: NEWS  changelog  control  copyright  docs  intelmq-db-api.docs  intelmq-db-api.install  intelmq-db-api.postinst  intelmq-db-api.postrm  intelmq-db-api.prerm  intelmq-mailgen.config  intelmq-mailgen.docs  intelmq-mailgen.examples  intelmq-mailgen.install  intelmq-mailgen.postinst  intelmq-mailgen.postrm  intelmq-mailgen.templates  rules
docs/: Makefile  concept.rst  conf.py  index.rst  intelmqcbmail.rst  requirements.txt  scripts.rst
example-scripts/: 10shadowservercsv.py  20xarf.py
example_scripts/: 00_add_variables_to_context.py  00add_variables_to_context.py  01_constituency_copies.py  10_shadowservercsv.py  10shadowservercsv.py  11_malware-infection.py  11avalanche.py  11malware-infection.py  12malware-infected.py  12malware-infection.py  13vulnerable-service.py  20_demo.py  20xarf.py  21_xarf.py  99fallback.py  variables.json
extras/: IMPORTANT  checkticket.py  dirty_setup.sh
intelmqmail/: cb.py  db.py  mail.py  notification.py  script.py  tableformat.py  templates.py
lib/: intelmq_xarf_common.py  intelmq_xarf_fraud.py  intelmq_xarf_info_dnsbl.py  intelmq_xarf_loginattack.py  intelmq_xarf_malwareattack.py
sql/: events.sql  notifications.sql  updates.md  updates.txt
(+74 files in other folders)
