# SPDX-FileCopyrightText: 2022 Sebastian Wagner <sebastian.wagner@intevation.de>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[bdist_wheel]
universal = 1

[pep8]
ignore = E221, E722, W504, E501

[pycodestyle]
ignore = E221, E722, W504, E501

[flake8]
ignore = E221, E722, W504, E501

[codespell]
skip = *.csv,*.data,*.svg,./docs/_build,.eggs,.git,testfile.txt,dga.txt,*.txt,*.json,./cover,*.egg-info

[metadata]
name = intelmq-mailgen
description = A mail sending module for IntelMQ
author = Intevation GmbH
maintainer = Intevation GmbH
maintainer_email = sebastian.wagner@intevation.de
url = https://github.com/intevation/intelmq-mailgen
license =  AGPL-3.0-or-later and LGPL-2.1-or-later
license_file = COPYING
long_description = file: README.md
